--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,27 @@
 <html>
 <head>
   <title>Workout</title>
+  <%= render 'layouts/bootstrap' %>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
-<%= yield %>
+  <%= render 'layouts/navbar' %>
+
+  <div class="container">
+   <% flash.each do |name, msg|%>
+        <% if msg.is_a?(String) %>
+            <div class="alert alert-<%= name == "notice" || name == "success" ? "success" : "danger" %> alert-dismissable">
+                <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                <%= content_tag :div, msg, :id => "flash_#{name}" %>
+            </div>
+        <% end %>
+    <% end %>
+
+    <%= yield %>
+  </div>
 
 </body>
 </html>
