Added validations to add workout

--- a/app/views/exercises/_form.html.erb
+++ b/app/views/exercises/_form.html.erb
@@ -2,7 +2,7 @@
   <% if @exercise.errors.any? %>
     <div id="error-explanation" class="alert alert-danger alert-dismissable">
       <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-      <h4><%= pluralize(@exercuse.errors.count, "error") %> prohibited this restaurant from being saved:</h4>
+      <h4><%= pluralize(@exercise.errors.count, "error") %> prohibited this restaurant from being saved:</h4>
 
       <ul>
       <% @exercise.errors.full_messages.each do |message| %>
