List all workouts w/graph

--- a/app/views/exercises/_form.html.erb
+++ b/app/views/exercises/_form.html.erb
@@ -18,11 +18,11 @@
   </div>
   <div class="form-group">
     <%= f.label :workout %><br>
-      <%= f.text_area :workout, class: "form-control"%>
+      <%= f.text_area :workout, class: "form-control" %>
   </div>
   <div class="form-group">
     <%= f.label :workout_date, "Date" %><br>
-      <%= f.text_field :workout_date, class: "form-control"%>
+      <%= f.text_field :workout_date, class: "form-control", id: "exercise_workout_date" %>
   </div>
   <p>
     <div class="actions">
