--- a/app/views/exercises/index.html.erb
+++ b/app/views/exercises/index.html.erb
@@ -1,10 +1,37 @@
 <div class="row">
   <div class="col-md-9">
-    <h1>My Workout Sessions</h1>
-    <%= link_to "Add Workout", new_user_exercise_path(current_user), class: "btn btn-success" %>
+    <h1>My Workout Sessions <%= link_to "Add Workout", new_user_exercise_path(current_user), class: "btn btn-success" %></h1>
   </div>
-  <dic class="col-md-3">
+  <div class="col-md-3">
 
-  </dic>
+  </div>
 
+  <% unless @exercises.empty? %>
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th>Duration</th>
+          <th>Workout Details</th>
+          <th>Date</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @exercises.each do |exercise| %>
+        <tr>
+          <td><%= exercise.duration %></td>
+          <td><%= truncate(exercise.workout, length: 100) %></td>
+          <td><%= exercise.workout_date %></td>
+          <td><%= link_to "Show", [current_user, exercise] %></td>
+          <td><%= link_to "Edit", [:edit, current_user, exercise] %></td>
+          <td><%= link_to "Delete", [current_user, exercise], method: :delete, data: {confirm: "Are you sure?"} %></td>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
+  <% else %>
+    <h2>No Workouts Added Yet.</h2>
+  <% end %>
+
+  <%= content_tag :div, "", id: "chart", data: {workouts: @exercises} %>
 </div>
