--- a/app/views/exercises/_form.html.erb
+++ b/app/views/exercises/_form.html.erb
@@ -22,11 +22,11 @@
   </div>
   <div class="form-group">
     <%= f.label :workout_date, "Date" %><br>
-      <%= f.text_field :workout_date, class: "form-control", id: "exercise_workout_date" %>
+      <%= f.text_field :workout_date, class: "form-control" %>
   </div>
   <p>
     <div class="actions">
-      <%= f.submit "Add Workout", class: "btn btn-primary" %>
+      <%= f.submit class: "btn btn-primary" %>
     </div>
   </p>
 <% end %>
