--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,3 +1,11 @@
 <h1>The Lounge</h1>
 
-<p></p>
+<h2>Users:</h2>
+<%= will_paginate @users, renderer: BootstrapPagination::Rails, class: "pull-left paginate" %>
+<div class="row">
+  <% @users.each do |u| %>
+  <div class="col-md-10 well member">
+    <%= u.username %>
+  </div>
+  <% end %>
+</div>
