--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -14,6 +14,12 @@
       <ul class="nav navbar-nav">
         <li><%= link_to "The Lounge", root_path %></li>
       </ul>
+      <%= form_tag(search_dashboard_path, class: "navbar-form navbar-left", role: "search") do %>
+        <div class="form-group">
+          <%= text_field_tag :search_username, nil, placeholder: "Search Username", class: "form-control" %>
+        </div>
+        <%= submit_tag "Search", class: "btn btn-default" %>
+      <% end %>
       <ul class="nav navbar-nav navbar-right">
       <% if user_signed_in? %>
         <li><%= link_to "My Workouts", user_exercises_path(current_user) %></li>
